--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 
 .navbar {
   width: 100%;
-  background: #000;
+  background: #212121;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.24);
 }
 
@@ -27,9 +27,7 @@ body {
   min-height: 80px;
 }
 
-.navbar .menu-items {
-  display: flex;
-}
+
 
 .navbar .nav-container li {
   list-style: none;
@@ -101,22 +99,28 @@ body {
 .navbar .menu-items {
   padding-top: 100px;
   box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  height: 100vh;
+  height: 110vh;
   background: #9d8c8cd4 ;
   width: 80%;
   transform: translate(-150%);
   display: flex;
   flex-direction: column;
-  margin-left: -50px;
   padding-left: 50px;
   transition: transform 0.5s ease-in-out;
   text-align: center;
+  position: absolute;
+  z-index: 3;
 }
 
 .navbar .menu-items li {
   margin-bottom: 1.2rem;
   font-size: 1.5rem;
   font-weight: 500;
+  display: flex;
+  justify-content: flex-start;
+}
+.navbar .menu-items li img{
+
 }
 
 .logo {
@@ -152,9 +156,90 @@ body {
   background: #303030;
 }
 .main-card{
-  min-width: 344px;
-  min-height: 260px;
-  padding: 20px 8px;
-  background: url("../img/some-1.png") no-repeat;
+  position: relative;
+  width: 344px;
+  height: 260px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  z-index: 2;
 }
+.main-card img{
+  max-width: 344px;
+  max-height: 260px;
+}
+.main-card .second-card{
+  width: 340px;
+  height: 68px;
+  top: 192px;
+  position: absolute;
+  background: rgba(57, 120, 78, 0.6);
+  transform: matrix(1, 0, 0, 1, 0, 0);
+}
+.last-card{
+  margin-bottom: 62px;
+}
+.main-card .second-card .text-box{
+  width: 250px;
+  height: 44px;
+  margin: 12px 82px 12px 10px;
+
+}
+.main-card .second-card .text-box p{
+  font-size: 18px;
+  color: #FFFFFF;
+  line-height: 24px;
+}
+.main-card .second-card .icons-block{
+  left: 265px;
+  top: 13px;
+  position: absolute;
+  width: 68px;
+  height: 24px;
+}
+.main-card .second-card .icons-block .share-img{
+  float: right;
+  width: 24px;
+  height: 24px;
+}
+.main-box .card-container{
+  min-height: 1150px;
+  display: flex;
+  flex-direction: column;
+
+}
+.main-box .card-container .second{
+  margin-top: 20px;
+}
+.footer-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  min-width: 360px;
+  min-height: 48px;
+  background: #000;
+}
+@media  screen and (min-width: 1200px){
+ .logo{
+   right: 425px;
+ }
+  .navbar .menu-items{
+    width: 30%;
+    height: 85vh;
+  }
+}
+@media  screen and (min-width: 1300px){
+  .navbar .menu-items{
+    width: 60%;
+
+  }
+}
+
+
+
+
+
+
 
